--- a/index.html
+++ b/index.html
@@ -243,14 +243,14 @@
 					<div id="modal-02" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/corkino.jpg" alt="" />
+							<img src="images/corkino.jpg"/>
 						</div>
 
 						<div class="description-box">
 							<h4>corkino</h4>
-							<p>Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
-
 							<div class="categories">Instruments Production</div>
+							<p align="justify">Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
+
 						</div>
 
 						<div class="link-box">
