--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/liberty.jpg" alt="Shutterbug">
+							<img src="images/corkino.jpg" alt="corkino">
 							<a href="#modal-02" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
-										<h3 class="folio-title">Another Example</h3>
+										<h3 class="folio-title">corkino</h3>
 										<span class="folio-types">
-											Web Design
+											Instruments Developement
 										</span>
 									</div>
 								</div>
@@ -248,7 +248,7 @@
 
 						<div class="description-box">
 							<h4>corkino</h4>
-							<div class="categories">Instruments Production</div>
+							<div class="categories">Instruments Developement</div>
 							<p align="justify">Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
 
 						</div>
