--- a/index.html
+++ b/index.html
@@ -217,6 +217,22 @@
 						</div>
 					</div> <!-- /folio-item -->
 
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/maxmsp.jpg" alt="Sound Design">
+							<a href="#modal-03" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">Sound Design</h3>
+										<span class="folio-types">
+											Coding
+										</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div> <!-- /folio-item -->
+
 
 					<!-- modal popups - begin
 	            ============================================================= -->
@@ -259,6 +275,26 @@
 						</div>
 
 					</div> <!-- /modal-02 -->
+
+					<div id="modal-03" class="popup-modal slider mfp-hide">
+
+						<div class="media">
+							<img src="images/maxmsp.jpg"/>
+						</div>
+
+						<div class="description-box">
+							<h4>corkino</h4>
+							<div class="categories">Sound Design</div>
+							<p align="justify">Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
+
+						</div>
+
+						<div class="link-box">
+							<a href="https://velitch.github.io/velitch/2021-10-13-corkino/">Details</a>
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+
+					</div> <!-- /modal-03 -->
 
 
 					<!-- modal popups - end
