--- a/index.html
+++ b/index.html
@@ -233,6 +233,22 @@
 						</div>
 					</div> <!-- /folio-item -->
 
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/santacecilia.jpg" alt="Conservatory Santa Cecilia">
+							<a href="#modal-04" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">Conservatory Santa Cecilia</h3>
+										<span class="folio-types">
+											Concerts
+										</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div> <!-- /folio-item -->
+
 
 					<!-- modal popups - begin
 	            ============================================================= -->
@@ -291,6 +307,26 @@
 
 						<div class="link-box">
 							<a href="https://velitch.github.io/velitch/pages/maxmsp/">Details</a>
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+
+					</div> <!-- /modal-03 -->
+
+					<div id="modal-04" class="popup-modal slider mfp-hide">
+
+						<div class="media">
+							<img src="images/santacecilia.jpg"/>
+						</div>
+
+						<div class="description-box">
+							<h4>Conservatory Santa Cecilia</h4>
+							<div class="categories">Concerts</div>
+							<p align="justify">Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
+
+						</div>
+
+						<div class="link-box">
+							<a href="https://www.conservatoriosantacecilia.it">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
