--- a/index.html
+++ b/index.html
@@ -330,7 +330,47 @@
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
-					</div> <!-- /modal-03 -->
+					</div> <!-- /modal-04 -->
+
+					<div id="modal-06" class="popup-modal slider mfp-hide">
+
+						<div class="media">
+							<img src="images/santacecilia.jpg"/>
+						</div>
+
+						<div class="description-box">
+							<h4>Conservatory Santa Cecilia</h4>
+							<div class="categories">Concerts</div>
+							<p align="justify">Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
+
+						</div>
+
+						<div class="link-box">
+							<a href="https://www.conservatoriosantacecilia.it">Details</a>
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+
+					</div> <!-- /modal-05 -->
+
+					<div id="modal-06" class="popup-modal slider mfp-hide">
+
+						<div class="media">
+							<img src="images/santacecilia.jpg"/>
+						</div>
+
+						<div class="description-box">
+							<h4>Conservatory Santa Cecilia</h4>
+							<div class="categories">Concerts</div>
+							<p align="justify">Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
+
+						</div>
+
+						<div class="link-box">
+							<a href="https://www.conservatoriosantacecilia.it">Details</a>
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+
+					</div> <!-- /modal-06 -->
 
 
 					<!-- modal popups - end
