--- a/index.html
+++ b/index.html
@@ -249,6 +249,38 @@
 						</div>
 					</div> <!-- /folio-item -->
 
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/dibox.jpg" alt="Dual Channel DI Box">
+							<a href="#modal-05" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">Dual Channel DI Box</h3>
+										<span class="folio-types">
+											Instruments Developement
+										</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div> <!-- /folio-item -->
+
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/crm.jpg" alt="crm">
+							<a href="#modal-06" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">Centro Ricerche Musicali </h3>
+										<span class="folio-types">
+											Art Installations and Concerts
+										</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div> <!-- /folio-item -->
+
 
 					<!-- modal popups - begin
 	            ============================================================= -->
