--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 							<a href="#modal-06" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
-										<h3 class="folio-title">Centro Ricerche Musicali </h3>
+										<h3 class="folio-title">Centro Ricerche Musicali</h3>
 										<span class="folio-types">
 											Art Installations and Concerts
 										</span>
@@ -364,15 +364,15 @@
 
 					</div> <!-- /modal-04 -->
 
-					<div id="modal-06" class="popup-modal slider mfp-hide">
+					<div id="modal-05" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/santacecilia.jpg"/>
+							<img src="images/dibox.jpg"/>
 						</div>
 
 						<div class="description-box">
-							<h4>Conservatory Santa Cecilia</h4>
-							<div class="categories">Concerts</div>
+							<h4>Dual Channel DI Box</h4>
+							<div class="categories">Instruments Developement</div>
 							<p align="justify">Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
 
 						</div>
@@ -387,18 +387,18 @@
 					<div id="modal-06" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/santacecilia.jpg"/>
+							<img src="images/crm.jpg"/>
 						</div>
 
 						<div class="description-box">
-							<h4>Conservatory Santa Cecilia</h4>
-							<div class="categories">Concerts</div>
+							<h4>Centro Ricerche Musicali</h4>
+							<div class="categories">Art Installations</div>
 							<p align="justify">Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
 
 						</div>
 
 						<div class="link-box">
-							<a href="https://www.conservatoriosantacecilia.it">Details</a>
+							<a href="http://www.crm-music.it">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
