--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/santacecilia.jpg" alt="Conservatory Santa Cecilia">
+							<img src="images/scecilia.jpg" alt="Conservatory Santa Cecilia">
 							<a href="#modal-03" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
@@ -328,7 +328,7 @@
 					<div id="modal-03" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/santacecilia.jpg"/>
+							<img src="images/scilia.jpg"/>
 						</div>
 
 						<div class="description-box">
