--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 					<div id="modal-03" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/scilia.jpg"/>
+							<img src="images/scecilia.jpg"/>
 						</div>
 
 						<div class="description-box">
