--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 
 						<h3>Art Installations</h3>
 
-						<p class="desc"> International Embassies.
+						<p class="desc"> Accuracy of technical and aesthetic details, passion for multidisciplinarity..
 						</p>
 
 					</div>
