--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 
 						<h3>Art Installations</h3>
 
-						<p class="desc"> Accuracy of technical and aesthetic details, passion for multidisciplinarity..
+						<p class="desc"> Accuracy of technical and aesthetic details, passion for multidisciplinarity. In recent years I have had the honor of collaborating as a musical technical assistant for dozens of artistic installations conceived by Centro Ricerche Musicali, historical promoter of contemporary art and science in Rome.
 						</p>
 
 					</div>
