--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 
 						<h3>Multilingual Skills</h3>
 
-						<p class="desc">text.
+						<p class="desc">The extensive knowledge of English, Italian, Russian and Bulgarian allowed me to be able to speak in the workplace in any context, from the technician with artists from all over the world to the formal with embassies and organizations..
 						</p>
 
 					</div>
