--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 
 					<div class="service-content">
 
-						<h3>Analog and Digital</h3>
+						<h3>Hardware and Software Developement</h3>
 
 						<p class="desc">Soldering coding.
 						</p>
@@ -508,7 +508,7 @@
 
 						<h3>Multilingual Skills</h3>
 
-						<p class="desc">The extensive knowledge of English, Italian, Russian and Bulgarian allowed me to be able to speak in the workplace in any context, from the technician with artists from all over the world to the formal with embassies and organizations..
+						<p class="desc">The extensive knowledge of English, Italian, Russian and Bulgarian allowed me to be able to speak in the workplace in any context, from technician aspects with artists from all over the world to the formal with embassies and organizations.
 						</p>
 
 					</div>
