--- a/index.html
+++ b/index.html
@@ -491,9 +491,10 @@
 
 					<div class="service-content">
 
-						<h3>Hardware and Software Developement</h3>
+						<h3>Instruments Developement</h3>
 
-						<p class="desc">Soldering coding.
+						<p class="desc">
+From the conception of the product to its realization. Do you have an idea of ​​sound? Let's develop it! From hardware to software, from soldering to coding your idea will become reality. Check out my latest projects! 
 						</p>
 
 					</div>
@@ -508,7 +509,7 @@
 
 						<h3>Multilingual Skills</h3>
 
-						<p class="desc">The extensive knowledge of English, Italian, Russian and Bulgarian allowed me to be able to speak in the workplace in any context, from technician aspects with artists from all over the world to the formal with embassies and organizations.
+						<p class="desc">The extensive knowledge of English, Italian, Russian and Bulgarian allowes me to be able to speak in the workplace in any context, from technician aspects with artists from all over the world to the formal with embassies and organizations.
 						</p>
 
 					</div>
