--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 
 						<h3>Art Installations</h3>
 
-						<p class="desc"> Accuracy of technical and aesthetic details, passion for multidisciplinarity. In recent years I have had the honor of collaborating as a musical technical assistant for dozens of artistic installations conceived by Centro Ricerche Musicali, historical promoter of contemporary art and science in Rome.
+						<p class="desc"> Accuracy of technical and aesthetic details, passion for multidisciplinarity. In recent years I have collaborated as a musical technical assistant for dozens of artistic installations conceived by Centro Ricerche Musicali, historical promoter of contemporary art and science in Rome.
 						</p>
 
 					</div>
@@ -493,8 +493,7 @@
 
 						<h3>Instruments Developement</h3>
 
-						<p class="desc">
-From the conception of the product to its realization. Do you have an idea of ​​sound? Let's develop it! From hardware to software, from soldering to coding your idea will become reality. Check out my latest projects!
+						<p class="desc">From the conception of the product to its realization. Do you have an idea of ​​sound? Let's develop it! From hardware to software, from soldering to coding your idea will become reality. Check out my latest projects!
 						</p>
 
 					</div>
