--- a/index.html
+++ b/index.html
@@ -524,6 +524,8 @@
 						<h3>Tutoring</h3>
 
 						<p class="desc"><i>"She was of great help to me and my projects! I've a better understanding of Max thank to her help!"</i>.
+							<br>
+							Find out my freelance account on Upwork 
 						</p>
 
 					</div>
