--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 
 						<h3>Art Installations</h3>
 
-						<p class="desc"> Accuracy of technical and aesthetic details, passion for multidisciplinarity. In recent years I have collaborated as a musical technical assistant for dozens of artistic installations conceived by Centro Ricerche Musicali, historical promoter of contemporary art and science in Rome.
+						<p class="desc"> Accuracy of technical and aesthetic details, passion for multidisciplinarity. In last years I have collaborated as musical technical assistant for artistic installations conceived by Centro Ricerche Musicali, historical promoter of contemporary art and science in Rome.
 						</p>
 
 					</div>
@@ -525,7 +525,7 @@
 
 						<p class="desc"><i>"She was of great help to me and my projects! I've a better understanding of Max thank to her help!"</i>.
 							<br>
-							Find out my freelance account on Upwork 
+							Find out my freelance account on Upwork
 						</p>
 
 					</div>
