--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 
 						<h3>Art Installations</h3>
 
-						<p class="desc"> Accuracy of technical and aesthetic details, passion for multidisciplinarity. In last years I have collaborated as musical technical assistant for artistic installations conceived by <a href="http://www.crm-music.it">Centro Ricerche Musicali</a>, historical promoter of contemporary art and science in Rome.
+						<p class="desc"> Accuracy of technical and aesthetic details, passion for multidisciplinarity. In last years I have collaborated as musical assistant for artistic installations conceived by <a href="http://www.crm-music.it">Centro Ricerche Musicali</a>, historical promoter of contemporary art and science in Rome.
 						</p>
 
 					</div>
