--- a/index.html
+++ b/index.html
@@ -448,7 +448,9 @@
 
 						<h3>Live Sound Engeneering</h3>
 
-						<p class="desc">With the care of timbre, dynamics and space, I have gained hundreds of hours of concerts of all kinds: from classical to contemporary music, from folk to jazz. The next one is just a surprise and we will turn it into an experience!
+						<p class="desc">With the care of timbre, dynamics and space, I have gained hundreds of hours of concerts of all kinds: from classical to contemporary music, from folk to jazz.
+						<br>
+							The next one is just a surprise and we will turn it into an experience!
 						</p>
 
 					</div>
