--- a/index.html
+++ b/index.html
@@ -480,7 +480,9 @@
 
 						<h3>Instruments Developement</h3>
 
-						<p class="desc">From the conception of the product to its realization. Do you have an idea of ​​sound? Let's develop it! From hardware to software, from soldering to coding your idea will become reality. Check out my latest projects!
+						<p class="desc">From the conception of the product to its realization. Do you have an idea of ​​sound? Let's develop it! From hardware to software, from soldering to coding your idea will become reality.
+						<br>
+							Check out my latest projects!
 						</p>
 
 					</div>
