--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 
 						<h3>Art Installations</h3>
 
-						<p class="desc"> Accuracy of technical and aesthetic details, passion for multidisciplinarity. In last years I have collaborated as musical assistant for artistic installations conceived by <a href="http://www.crm-music.it">Centro Ricerche Musicali</a>, historical promoter of contemporary art and science in Rome.
+						<p align="justify" class="desc"> Accuracy of technical and aesthetic details, passion for multidisciplinarity. In last years I have collaborated as musical assistant for artistic installations conceived by <a href="http://www.crm-music.it">Centro Ricerche Musicali</a>, historical promoter of contemporary art and science in Rome.
 						</p>
 
 					</div>
@@ -481,7 +481,7 @@
 
 						<h3>Instruments Developement</h3>
 
-						<p class="desc">From the conception of the product to its realization. Do you have an idea of ​​sound? Let's develop it! From hardware to software, from soldering to coding your idea will become reality.
+						<p align="justify" class="desc">From the conception of the product to its realization. Do you have an idea of ​​sound? Let's develop it! From hardware to software, from soldering to coding your idea will become reality.
 						<br>
 						<br>
 							Check out my latest projects!
@@ -499,7 +499,7 @@
 
 						<h3>Visuals Compositions</h3>
 
-						<p class="desc">teaching abilitation.
+						<p align="justify" class="desc">teaching abilitation.
 						</p>
 
 					</div>
@@ -514,7 +514,7 @@
 
 						<h3>Multilingual Skills</h3>
 
-						<p class="desc">The extensive knowledge of English, Italian, Russian and Bulgarian allowes me to be able to speak in the workplace in any context, from technician aspects with artists from all over the world to the formal with embassies and organizations.
+						<p align="justify" class="desc">The extensive knowledge of English, Italian, Russian and Bulgarian allowes me to be able to speak in the workplace in any context, from technician aspects with artists from all over the world to the formal with embassies and organizations.
 						</p>
 
 					</div>
@@ -529,7 +529,7 @@
 
 						<h3>Tutoring</h3>
 
-						<p class="desc"><i>"She was of great help to me and my projects! I've a better understanding of Max MSP thank to her help!"</i>.
+						<p align="justify" class="desc"><i>"She was of great help to me and my projects! I've a better understanding of Max MSP thank to her help!"</i>.
 							<br>
 							<br>
 							Find out <a href="https://www.upwork.com/freelancers/~012af1b30a17910815">my freelance account</a> on Upwork for more details.
