--- a/index.html
+++ b/index.html
@@ -481,7 +481,9 @@
 
 						<h3>Instruments Developement</h3>
 
-						<p align="justify" class="desc">From the conception of the product to its realization. Do you have an idea of ​​sound? Let's develop it! From hardware to software, from soldering to coding your idea will become reality.
+						<p align="justify" class="desc">From the conception of the product to its realization. Do you have an idea of ​​sound?</p>
+						<p class="desc">Let's develop it!</p>
+						<p align="justify" class="desc">From hardware to software, from soldering to coding your idea will become reality.
 						<br>
 						<br>
 							Check out my latest projects!
