--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 
 						<h3>Art Installations</h3>
 
-						<p align="justify" class="desc"> Accuracy of technical and aesthetic details, passion for multidisciplinarity. In last years I have collaborated as musical technical assistant for dozens of artistic installations conceived by <a href="http://www.crm-music.it">Centro Ricerche Musicali</a></p><p> historical promoter of contemporary art and science in Rome.
+						<p align="justify" class="desc"> Accuracy of technical and aesthetic details, passion for multidisciplinarity. In last years I have collaborated as musical technical assistant for dozens of artistic installations conceived by <a href="http://www.crm-music.it">Centro Ricerche Musicali</a>, historical promoter of contemporary art and science in Rome.
 						</p>
 
 					</div>
@@ -481,9 +481,7 @@
 
 						<h3>Instruments Developement</h3>
 
-						<p align="justify" class="desc">From the conception of the product to its realization. Do you have an idea of ​​sound?</p>
-						<p class="desc">Let's develop it!</p>
-						<p align="justify" class="desc">From hardware to software, from soldering to coding your idea will become reality.
+						<p align="justify" class="desc">From the conception of the product to its realization. Do you have an idea of ​​sound? Let's develop it! From hardware to software, from soldering to coding your idea will become reality.
 						<br>
 						<br>
 							Check out my latest projects!
