--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 
 						<h3>Visuals Compositions</h3>
 
-						<p align="justify" class="desc">teaching abilitation.
+						<p align="justify" class="desc">.
 						</p>
 
 					</div>
@@ -529,7 +529,7 @@
 
 						<h3>Tutoring</h3>
 
-						<p class="desc"><i>"She was of great help to me and my projects!<p><p align="justify" class="desc"> I've a better understanding of Max MSP thank to her help!"</i>.
+						<p class="desc"><i>"She was of great help to me and my projects! I've a better understanding of Max MSP thank to her help!"</i>.
 							<br>
 							<br>
 							Find out <a href="https://www.upwork.com/freelancers/~012af1b30a17910815">my freelance account</a> on Upwork for more details.
