--- a/index.html
+++ b/index.html
@@ -482,9 +482,10 @@
 						<h3>Instruments Developement</h3>
 
 						<p align="justify" class="desc">From the conception of the product to its realization. Do you have an idea of ​​sound? Let's develop it! From hardware to software, from soldering to coding your idea will become reality.
+						</p>
 						<br>
 						<br>
-							Check out my latest projects!
+						<p class="desc">Check out my latest projects!
 						</p>
 
 					</div>
