--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 
 						<h3>Art Installations</h3>
 
-						<p align="justify" class="desc"> Accuracy of technical and aesthetic details, passion for multidisciplinarity. In last years I have collaborated as musical technical assistant for dozens of artistic installations conceived by <a href="http://www.crm-music.it">Centro Ricerche Musicali</a>, historical promoter of contemporary art and science in Rome.
+						<p align="justify" class="desc"> Accuracy of technical and aesthetic details, passion for multidisciplinarity. In last years I have collaborated as musical technical assistant for dozens of artistic installations conceived by <a href="http://www.crm-music.it">Centro Ricerche Musicali</a>, historical and international promoter of contemporary art and science of Rome.
 						</p>
 
 					</div>
