--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 
 						<h3>Visuals Compositions</h3>
 
-						<p align="justify" class="desc">Graphic and visual skills associated with the basic elements of composition have extended my work performance to applications of all kinds. Find out in the portfolio!.
+						<p align="justify" class="desc">Graphic and visual skills associated with the basic elements of composition have extended my work performance to applications of all kinds. Animations, video editing, and more. Find out <a class="button stroke smoothscroll" href="#porfolio" title="">my portfolio!</a>
 						</p>
 
 					</div>
