--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 						<div class="description-box">
 							<h4>Centro Ricerche Musicali</h4>
 							<div class="categories">Art Installations</div>
-							<p align="justify">Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
+							<p align="justify">A non-profit cultural centre, CRM was founded at Rome in 1988 by composers Laura Bianchini and Michelangelo Lupone with a group of musicians and researchers for the purpose of promoting research into the aesthetic, analytical, musicological and scientific aspects of music. In 1990 CRM was officially recognized as a “Music Research Centre” by the Ministry for University Education and Scientific & Technological Research and subsequently, in 1993, by the Japan Foundation.</p>
 
 						</div>
 
