--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 	<!-- Portfolio Section
    ================================================== -->
 	<section id="portfolio">
-
+		<a id="portfolio">
 		<div class="row section-intro">
 			<div class="col-twelve">
 
@@ -499,7 +499,7 @@
 
 						<h3>Visuals Compositions</h3>
 
-						<p align="justify" class="desc">Graphic and visual skills associated with the basic elements of composition have extended my work performance to applications of all kinds. Animations, video editing, brand identity and more. Find out <a class="smoothscroll" href="#porfolio" title="">my portfolio!</a>
+						<p align="justify" class="desc">Graphic and visual skills associated with the basic elements of composition have extended my work performance to applications of all kinds. Animations, video editing, brand identity and more. Find out <a href="#porfolio">my portfolio!</a>
 						</p>
 
 					</div>
