--- a/index.html
+++ b/index.html
@@ -335,7 +335,8 @@
 						<div class="description-box">
 							<h4>Conservatory Santa Cecilia</h4>
 							<div class="categories">Concerts</div>
-							<p align="justify">Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
+							<p align="justify">The "Santa Cecilia" Conservatory of Music in Rome is an Institute of Higher Musical Education belonging to the Ministry of Education, University and Research of the Italian State.
+The "Santa Cecilia" Conservatory of Music in Rome operates nationally and internationally, carries out a careful work of dissemination and development of talents in the area, carries out training, music production and research activities.</p>
 
 						</div>
 
