--- a/index.html
+++ b/index.html
@@ -167,7 +167,6 @@
 	<!-- Portfolio Section
    ================================================== -->
 	<section id="portfolio">
-		<a id="portfolio">
 		<div class="row section-intro">
 			<div class="col-twelve">
 
@@ -500,7 +499,7 @@ The "Santa Cecilia" Conservatory of Music in Rome operates nationally and intern
 
 						<h3>Visuals Compositions</h3>
 
-						<p align="justify" class="desc">Graphic and visual skills associated with the basic elements of composition have extended my work performance to applications of all kinds. Animations, video editing, brand identity and more. Find out <a href="#porfolio">my portfolio!</a>
+						<p align="justify" class="desc">Graphic and visual skills associated with the basic elements of composition have extended my work performance to applications of all kinds. Animations, video editing, brand identity and more. Find out my portfolio!</a>
 						</p>
 
 					</div>
