--- a/index.html
+++ b/index.html
@@ -376,7 +376,8 @@ The "Santa Cecilia" Conservatory of Music in Rome operates nationally and intern
 						<div class="description-box">
 							<h4>Dual Channel DI Box</h4>
 							<div class="categories">Instruments Developement</div>
-							<p align="justify">Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
+							<p align="justify">The DI Box is a indispensable tool in any concert or studio context. The Dual Channel DI Box was made on commission: the customer needed a compact, versatile device intended for the most varied uses. The tool makes use of the best components available on the market. The Monacor 10:1 (DIB-110) transformer is the star of the system!
+Its performances are currently the best in its category and make this product satisfactory in use. The tailor-made design of the product is what makes the difference, it's your idea that that becomes reality!</p>
 
 						</div>
 
