--- a/index.html
+++ b/index.html
@@ -377,12 +377,12 @@ The "Santa Cecilia" Conservatory of Music in Rome operates nationally and intern
 							<h4>Dual Channel DI Box</h4>
 							<div class="categories">Instruments Developement</div>
 							<p align="justify">The DI Box is a indispensable tool in any concert or studio context. The Dual Channel DI Box was made on commission: the customer needed a compact, versatile device intended for the most varied uses. The tool makes use of the best components available on the market. The Monacor 10:1 (DIB-110) transformer is the star of the system!
-Its performances are currently the best in its category and make this product satisfactory in use. The tailor-made design of the product is what makes the difference, it's your idea that that becomes reality!</p>
+Its performances are currently the best in its category and make this product satisfactory in use. The tailor-made design of the product is what makes the difference, it's your idea that becomes reality!</p>
 
 						</div>
 
 						<div class="link-box">
-							<a href="https://www.conservatoriosantacecilia.it">Details</a>
+							<a href="">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
