--- a/index.html
+++ b/index.html
@@ -355,7 +355,9 @@ The "Santa Cecilia" Conservatory of Music in Rome operates nationally and intern
 						<div class="description-box">
 							<h4>corkino</h4>
 							<div class="categories">Sound Design</div>
-							<p align="justify">Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
+							<p><i>"I would like to know how sound is made, to know how to recreate it and move it in space."</i>
+								<br>
+							<p align="justify">These were my ambitions before starting my studies at the Santa Cecilia Conservatory in Rome. Under the guidance of the best Italian teachers, I can say that after 5 years of in-depth study of all related subjects, I managed to achieve this goal!</p>
 
 						</div>
 
