--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ The "Santa Cecilia" Conservatory of Music in Rome operates nationally and intern
 						<div class="description-box">
 							<h4>corkino</h4>
 							<div class="categories">Sound Design</div>
-							<p><i>"I would like to know how sound is made, to know how to recreate it and move it in space."</i>
+							<p align="center"><i>"I would like to know how sound is made, to know how to recreate it and move it in space."</i>
 								<br>
 							<p align="justify">These were my ambitions before starting my studies at the Santa Cecilia Conservatory in Rome. Under the guidance of the best Italian teachers, I can say that after 5 years of in-depth study of all related subjects, I managed to achieve this goal!</p>
 
