--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ The "Santa Cecilia" Conservatory of Music in Rome operates nationally and intern
 						</div>
 
 						<div class="description-box">
-							<h4>corkino</h4>
+							<h4>Sound Design</h4>
 							<div class="categories">Sound Design</div>
 							<p align="center"><i>"I would like to know how sound is made, to know how to recreate it and move it in space."</i>
 								<br>
