--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@ Its performances are currently the best in its category and make this product sa
 <div class="row button-section">
 	<div class="col-twelve">
 		<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-		<a href="files/cv_gabrielavelitch.png" title="Download CV" class="button button-primary">Download CV</a>
+		<a href="files/cv_gabrielavelitch.pdf" title="Download CV" class="button button-primary">Download CV</a>
 	</div>
 </div>
 
