--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@ The "Santa Cecilia" Conservatory of Music in Rome operates nationally and intern
 						</div>
 
 						<div class="link-box">
+							<a href="https://www.gabrielavelitch.com/maxmsp.html">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
@@ -871,7 +872,7 @@ Its performances are currently the best in its category and make this product sa
 
 			<div class="col-six tab-full">
 				<div class="copyright">
-					<span>Gabriela Velitch 2021.</span>
+					<span>Gabriela Velitch 2022.</span>
 				</div>
 			</div>
 
