--- a/maxmsp.html
+++ b/maxmsp.html
@@ -64,6 +64,41 @@
 		</div> <!-- /row -->
 	</header> <!-- /header -->
 
+	<!-- intro section
+   ================================================== -->
+	<section id="intro">
+
+		<div class="intro-overlay"></div>
+
+		<div class="intro-content">
+			<div class="row">
+
+				<div class="col-twelve">
+
+					<h5>Hello, World.</h5>
+					<h1>I'm Gabriela Velitch.</h1>
+
+					<p class="intro-position">
+						<span>AV Technician</span>
+						<span>Electroacoustic Composer</span>
+						<span>Sound Designer</span>
+					</p>
+
+					<a class="button stroke smoothscroll" href="#resume" title="">About Me</a>
+
+				</div>
+
+			</div>
+		</div> <!-- /intro-content -->
+
+		<ul class="intro-social">
+			<li><a href="https://www.instagram.com/velitch/"><i class="fa fa-instagram"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/gabriela-velitch-5766991b2/"><i class="fa fa-linkedin"></i></a></li>
+			<li><a href="https://github.com/Velitch?tab=repositories"><i class="fa fa-github"></i></a></li>
+		</ul> <!-- /intro-social -->
+
+	</section> <!-- /intro -->
+
 
 	<!-- footer
    ================================================== -->
