--- a/maxmsp.html
+++ b/maxmsp.html
@@ -75,8 +75,8 @@
 
 				<div class="col-twelve">
 
-					<h5>Hello, World.</h5>
-					<h1>I'm Gabriela Velitch.</h1>
+					<h5></h5>
+					<h1>MaxMSP</h1>
 
 					<p class="intro-position">
 						<span>AV Technician</span>
