--- a/maxmsp.html
+++ b/maxmsp.html
@@ -93,6 +93,20 @@
 
 	</section> <!-- /intro -->
 
+	<!-- resume Section
+	 ================================================== -->
+	<section id="resume" class="grey-section">
+
+		<div class="row section-intro">
+			<div class="col-twelve">
+
+				<h5>Resume</h5>
+				<h1>Credentials</h1>
+
+				<p class="lead">A short description of the most significant steps in my career</p>
+				
+	</section> <!-- /features -->
+
 
 	<!-- footer
    ================================================== -->
