--- a/maxmsp.html
+++ b/maxmsp.html
@@ -100,11 +100,11 @@
 		<div class="row section-intro">
 			<div class="col-twelve">
 
-				<h5>Resume</h5>
-				<h1>Credentials</h1>
+				<h5>Tools</h5>
+				<h1>MaxMSP</h1>
 
 				<p class="lead">A short description of the most significant steps in my career</p>
-				
+
 	</section> <!-- /features -->
 
 
