--- a/maxmsp.html
+++ b/maxmsp.html
@@ -78,6 +78,30 @@
 
 				<p class="lead">A short description of the most significant steps in my career</p>
 
+				<div style="text-align:left;">
+				<h3>Filters</h3>
+				  <ul>
+				  <li><a href="https://velitch.github.io/velitch/2021-10-19-tool_filter_library/"><b>filter library</b></a></li>
+				  <li><a href="https://velitch.github.io/velitch/2021-10-19-tool_gen_allpass/"><b>gen~ allpass</b></a></li>
+				  <li><a href="https://velitch.github.io/velitch/2021-10-19-tool_gen_biquad/"><b>gen~ biquad</b></a></li>
+				  <li><a href="https://velitch.github.io/velitch/2021-10-19-tool_gen_combfilter/"><b>gen~ combfilter</b></a></li>
+				  <li><a href="https://velitch.github.io/velitch/2021-10-19-tool_gen_fir/"><b>gen~ FIR</b></a></li>
+				  <li><a href="https://velitch.github.io/velitch/2021-10-19-tool_gen_iir/"><b>gen~ IIR</b></a></li>
+				  <li><a href="https://velitch.github.io/velitch/2021-10-19-tool_gen_iir_vs_fir/"><b>gen~ IIR vs FIR</b></a></li>
+				  <li><a href="https://velitch.github.io/velitch/2021-10-19-tool_gen_onepole/"><b>gen~ onepole</b></a></li>
+				  <li><a href="https://velitch.github.io/velitch/2021-10-19-tool_gen_svf/"><b>gen~ svf</b></a></li>
+				</ul>
+				<h3>Reverb</h3>
+				  <ul>
+				  <li><a href="https://velitch.github.io/velitch/2021-10-19-tool_gen_freeverb/"><b>gen~ freeverb</b></a></li>
+				  <li><a href="https://velitch.github.io/velitch/2021-10-19-tool_gen_schroeder_JCRev/"><b>gen~ schroeder JCRev</b></a></li>
+				</ul>
+				<h3>Plugins</h3>
+				  <ul>
+				  <li><a href="https://velitch.github.io/velitch/2021-10-13-ui_corkino/"><b>corkino</b></a></li>
+				</ul>
+				</div>
+
 	</section> <!-- /features -->
 
 
