--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ The "Santa Cecilia" Conservatory of Music in Rome operates nationally and intern
 						</div>
 
 						<div class="link-box">
-							<a href="https://www.gabrielavelitch.com/maxmsp.html">Details</a>
+							<a href="https://www.gabrielavelitch.com/maxmsp.md">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
