--- a/index.html
+++ b/index.html
@@ -37,9 +37,30 @@
 
 <body id="top">
 
+	<head>
+
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	  <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
+	  <meta name="description" content="">
+
+
+	  <title>Home</title>
+	  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+	  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
+	  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+	  <link rel="stylesheet" href="assets/dropdown/css/style.css">
+	  <link rel="stylesheet" href="assets/socicon/css/styles.css">
+	  <link rel="stylesheet" href="assets/theme/css/style.css">
+	  <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
+	  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+
+
+	</head>
+
 	<!-- header
    ================================================== -->
- </head>
+
  <body>
 
    <section data-bs-version="5.1" class="menu menu2 cid-sYrTssyGa0" once="menu" id="menu2-k">
