--- a/index.html
+++ b/index.html
@@ -40,7 +40,46 @@
 	<!-- header
    ================================================== -->
 
+	 <body>
 
+	   <section data-bs-version="5.1" class="menu menu2 cid-sYseAX4x5N" once="menu" id="menu2-0">
+
+	     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
+	         <div class="container">
+	             <div class="navbar-brand">
+	                 <span class="navbar-logo">
+	                     <a href="https://mobiri.se">
+	                         <img src="assets/images/logo.png" alt="Mobirise" style="height: 3rem;">
+	                     </a>
+	                 </span>
+	                 <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="https://mobiri.se">Mobirise</a></span>
+	             </div>
+	             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+	                 <div class="hamburger">
+	                     <span></span>
+	                     <span></span>
+	                     <span></span>
+	                     <span></span>
+	                 </div>
+	             </button>
+	             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
+	                     <li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobiri.se">
+	                             About us</a></li>
+	                     <li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobiri.se">
+	                             Services</a></li>
+	                     <li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobiri.se">Contacts</a>
+	                     </li>
+	                 </ul>
+
+
+	             </div>
+	         </div>
+	     </nav>
+	 </section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/p" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Page was <a href="https://mobirise.site/g" style="color:#aaa;">created</a> with Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>
+
+
+	 </body>
 
 	<!-- intro section
    ================================================== -->
