--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/vendor.css">
+	<link rel="stylesheet" href="css/navbar.css">
 
 
 	<!-- script
@@ -41,7 +42,14 @@
 	<!-- header
    ================================================== -->
 
-
+	 <ul class="snip1143">
+	   <li class="current"><a href="#" data-hover="Home">Home</a></li>
+	   <li><a href="#" data-hover="About Us">About Us</a></li>
+	   <li><a href="#" data-hover="Blog">Blog</a></li>
+	   <li><a href="#" data-hover="Services">Services</a></li>
+	   <li><a href="#" data-hover="Products">Products</a></li>
+	   <li><a href="#" data-hover="Contact">Contact</a></li>
+	 </ul>
 
 	<!-- intro section
    ================================================== -->
