--- a/index.html
+++ b/index.html
@@ -42,14 +42,19 @@
 	<!-- header
    ================================================== -->
 
-	 <ul class="snip1143">
-	   <li class="current"><a href="#" data-hover="Home">Home</a></li>
-	   <li><a href="#" data-hover="About Us">About Us</a></li>
-	   <li><a href="#" data-hover="Blog">Blog</a></li>
-	   <li><a href="#" data-hover="Services">Services</a></li>
-	   <li><a href="#" data-hover="Products">Products</a></li>
-	   <li><a href="#" data-hover="Contact">Contact</a></li>
-	 </ul>
+	 <body class="news">
+	   <header>
+	     <div class="nav">
+	       <ul>
+	         <li class="home"><a href="#">Home</a></li>
+	         <li class="tutorials"><a class="active" href="#">Tutorials</a></li>
+	         <li class="about"><a href="#">About</a></li>
+	         <li class="news"><a href="#">Newsletter</a></li>
+	         <li class="contact"><a href="#">Contact</a></li>
+	       </ul>
+	     </div>
+	   </header>
+	 </body>
 
 	<!-- intro section
    ================================================== -->
