--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
    ================================================== -->
 	<script src="js/modernizr.js"></script>
 	<script src="js/pace.min.js"></script>
-	<script src="js/navbar.js"></script>
 
 	<!-- favicons
 	================================================== -->
@@ -43,34 +42,19 @@
 	<!-- header
    ================================================== -->
 
-	 <div class="navbar">
-
-	<div class="logo">
-		<h2>BRAND</h2>
-	</div>
-
-
-	<ul class="links">
-		<li><a href="#">Home</a></li>
-		<li><a href="#">About</a></li>
-		<li><a href="#">Pages</a></li>
-		<li><a href="#">Contact Us</a></li>
-	</ul>
-
-
-	<div class="right">
-		<button>Dashboard</button>
-	</div>
-
-	<div class="toggle">
-		<div class="line1"></div>
-		<div class="line2"></div>
-		<div class="line3"></div>
-	</div>
-
-
-</div>
-
+	 <body class="news">
+  <header>
+    <div class="nav">
+      <ul>
+        <li class="home"><a href="#">Home</a></li>
+        <li class="tutorials"><a class="active" href="#">Tutorials</a></li>
+        <li class="about"><a href="#">About</a></li>
+        <li class="news"><a href="#">Newsletter</a></li>
+        <li class="contact"><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </header>
+</body>
 
 	<!-- intro section
    ================================================== -->
