--- a/index.html
+++ b/index.html
@@ -42,19 +42,29 @@
 	<!-- header
    ================================================== -->
 
-	 <body class="news">
-  <header>
-    <div class="nav">
-      <ul>
-        <li class="home"><a href="#">Home</a></li>
-        <li class="tutorials"><a class="active" href="#">Tutorials</a></li>
-        <li class="about"><a href="#">About</a></li>
-        <li class="news"><a href="#">Newsletter</a></li>
-        <li class="contact"><a href="#">Contact</a></li>
-      </ul>
-    </div>
-  </header>
-</body>
+	 <div class="nav">
+	   <input type="checkbox" id="nav-check">
+	   <div class="nav-header">
+	     <div class="nav-title">
+	       JoGeek
+	     </div>
+	   </div>
+	   <div class="nav-btn">
+	     <label for="nav-check">
+	       <span></span>
+	       <span></span>
+	       <span></span>
+	     </label>
+	   </div>
+
+	   <div class="nav-links">
+	     <a href="//github.io/jo_geek" target="_blank">Github</a>
+	     <a href="http://stackoverflow.com/users/4084003/" target="_blank">Stackoverflow</a>
+	     <a href="https://in.linkedin.com/in/jonesvinothjoseph" target="_blank">LinkedIn</a>
+	     <a href="https://codepen.io/jo_Geek/" target="_blank">Codepen</a>
+	     <a href="https://jsfiddle.net/user/jo_Geek/" target="_blank">JsFiddle</a>
+	   </div>
+	 </div>
 
 	<!-- intro section
    ================================================== -->
