--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	   <input type="checkbox" id="nav-check">
 	   <div class="nav-header">
 	     <div class="nav-title">
-	       JoGeek
+	       Gabriela Velitch
 	     </div>
 	   </div>
 	   <div class="nav-btn">
