--- a/index.html
+++ b/index.html
@@ -58,11 +58,8 @@
 	   </div>
 
 	   <div class="nav-links">
-	     <a href="//github.io/jo_geek" target="_blank">Github</a>
-	     <a href="http://stackoverflow.com/users/4084003/" target="_blank">Stackoverflow</a>
-	     <a href="https://in.linkedin.com/in/jonesvinothjoseph" target="_blank">LinkedIn</a>
-	     <a href="https://codepen.io/jo_Geek/" target="_blank">Codepen</a>
-	     <a href="https://jsfiddle.net/user/jo_Geek/" target="_blank">JsFiddle</a>
+	     <a href="//github.io/jo_geek" target="_blank">TOOLS</a>
+	     <a href="http://stackoverflow.com/users/4084003/" target="_blank">PORTFOLIO</a>
 	   </div>
 	 </div>
 
