--- a/index.html
+++ b/index.html
@@ -42,26 +42,22 @@
 	<!-- header
    ================================================== -->
 
-	 <div class="nav">
-	   <input type="checkbox" id="nav-check">
-	   <div class="nav-header">
-	     <div class="nav-title">
-	       Gabriela Velitch
-	     </div>
-	   </div>
-	   <div class="nav-btn">
-	     <label for="nav-check">
-	       <span></span>
-	       <span></span>
-	       <span></span>
-	     </label>
-	   </div>
-
-	   <div class="nav-links">
-	     <a href="//github.io/jo_geek" target="_blank">TOOLS</a>
-	     <a href="http://stackoverflow.com/users/4084003/" target="_blank">PORTFOLIO</a>
-	   </div>
-	 </div>
+	 <section class="top-nav">
+    <div>
+      Logo Here
+    </div>
+    <input id="menu-toggle" type="checkbox" />
+    <label class='menu-button-container' for="menu-toggle">
+    <div class='menu-button'></div>
+  </label>
+    <ul class="menu">
+      <li>One</li>
+      <li>Two</li>
+      <li>Three</li>
+      <li>Four</li>
+      <li>Five</li>
+    </ul>
+  </section>
 
 	<!-- intro section
    ================================================== -->
