--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 	 <section class="top-nav">
     <div>
-      Logo Here
+      Gabriela Velitch
     </div>
     <input id="menu-toggle" type="checkbox" />
     <label class='menu-button-container' for="menu-toggle">
