--- a/index.html
+++ b/index.html
@@ -51,11 +51,7 @@
     <div class='menu-button'></div>
   </label>
     <ul class="menu">
-      <li>One</li>
-      <li>Two</li>
-      <li>Three</li>
-      <li>Four</li>
-      <li>Five</li>
+      <li>TOOLS</li>
     </ul>
   </section>
 
