--- a/index.html
+++ b/index.html
@@ -42,7 +42,35 @@
 	<!-- header
    ================================================== -->
 
+	 <section data-bs-version="5.1" class="menu menu2 cid-sYseAX4x5N" once="menu" id="menu2-0">
 
+	 	<nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
+	 			<div class="container">
+	 					<div class="navbar-brand">
+	 							<span class="navbar-logo">
+	 									<a href="index.html">
+	 											<img src="assets/images/favicon-96x96.png" alt="Mobirise" style="height: 3rem;">
+	 									</a>
+	 							</span>
+	 							<span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="index.html">Gabriela Velitch</a></span>
+	 					</div>
+	 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+	 							<div class="hamburger">
+	 									<span></span>
+	 									<span></span>
+	 									<span></span>
+	 									<span></span>
+	 							</div>
+	 					</button>
+	 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+	 							<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="tools.html">TOOLS</a></li>
+	 									<li class="nav-item"><a class="nav-link link text-white display-4" href="https://mobiri.se">PORTFOLIO</a></li></ul>
+
+
+	 					</div>
+	 			</div>
+	 	</nav>
+	 </section>
 
 	<!-- intro section
    ================================================== -->
