--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
 	<link rel="stylesheet" href="css/vendor.css">
 	<link rel="stylesheet" href="css/navbar.css">
 
+	<link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
+	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+	<link rel="stylesheet" href="assets/parallax/jarallax.css">
+	<link rel="stylesheet" href="assets/dropdown/css/style.css">
+	<link rel="stylesheet" href="assets/socicon/css/styles.css">
+	<link rel="stylesheet" href="assets/theme/css/style.css">
+
+
 
 	<!-- script
    ================================================== -->
