--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
 	<link rel="stylesheet" href="assets/dropdown/css/style.css">
 	<link rel="stylesheet" href="assets/socicon/css/styles.css">
 	<link rel="stylesheet" href="assets/theme/css/style.css">
-
+	<link rel="preload" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"></noscript>
+	<link rel="preload" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,500,600,700,400i,500i,600i,700i&display=swap"></noscript>
+	<link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
 
 
 	<!-- script
@@ -52,6 +56,11 @@
 	<!-- header
    ================================================== -->
 
+	 <div class="style-sheet-modern">
+	     <style scoped>
+
+	     </style>
+	 </div>
 	 <section data-bs-version="5.1" class="menu menu2 cid-sYseAX4x5N" once="menu" id="menu2-0">
 
 	 	<nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
