--- a/tools.html
+++ b/tools.html
@@ -98,7 +98,7 @@
                                 <h5 class="card-title mbr-fonts-style display-5">
                                     <strong>MaxMSP</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4">A Playground for Invention,<br>Max is an infinitely flexible space to create your own interactive software<br></p>
-                                <div class="mbr-section-btn"><a href="maxmsptools.html" class="btn btn-primary display-4">Learn more</a></div>
+                                <div class="mbr-section-btn"><a href="/pages/maxmsptools.html" class="btn btn-primary display-4">Learn more</a></div>
                             </div>
                         </div>
                         <div class="col-12 col-md-5">
@@ -118,7 +118,7 @@
                                 <h5 class="card-title mbr-fonts-style display-5">
                                     <strong>Faust</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4">Faust (Functional Audio Stream) is a functional programming language for sound synthesis and audio processing</p>
-                                <div class="mbr-section-btn"><a href="https://mobiri.se" class="btn btn-primary display-4">Learn more</a></div>
+                                <div class="mbr-section-btn"><a href="https://faust.grame.fr" class="btn btn-primary display-4">Learn more</a></div>
                             </div>
                         </div>
                         <div class="col-12 col-md-5">
