--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -38,8 +38,8 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="index.html">
-                        <img src="assets/images/favicon-96x96.png" alt="Mobirise" style="height: 3rem;">
+                    <a href="https://www.gabrielavelitch.com/index.html">
+                        <img src="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" alt="Mobirise" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="index.html">Gabriela Velitch</a></span>
