--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -39,7 +39,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://www.gabrielavelitch.com/index.html">
-                        <img src="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" alt="Mobirise" style="height: 3rem;">
+                        <img src="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="https://www.gabrielavelitch.com/index.html">Gabriela Velitch</a></span>
@@ -175,7 +175,7 @@
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-4">
-                    <a href="index.html#header13-1" class="text-primary">© Gabriela Velitch 2022.</a></p>
+                    <a href="https://www.gabrielavelitch.com/index.html#header13-1" class="text-primary">© Gabriela Velitch 2022.</a></p>
             </div>
         </div>
     </div>
