--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -179,10 +179,9 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
-  <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise free creator - <a href="https://mobirise.site/n" style="color:#aaa;">Try here</a></p>
+</section>
 
-</section><script src="https://www.gabrielavelitch.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+ <script src="https://www.gabrielavelitch.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
  <script src="https://www.gabrielavelitch.com/assets/parallax/jarallax.js"></script>
  <script src="https://www.gabrielavelitch.com/assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
  <script src="https://www.gabrielavelitch.com/assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
