--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -113,7 +113,7 @@
 <br>-&nbsp;gen~ IIR
 <br>-&nbsp;gen~ IIR vs FIR
 <br>-&nbsp;gen~ onepole
-<br>-&nbsp;<a href="gen_svf.html" class="text-primary"><b>gen~ svf</b></a></strong><br></p>
+<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_svf.html" class="text-primary"><b>gen~ svf</b></a></strong><br></p>
                                 </div>
                             </div>
                         </div>
