--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -113,7 +113,7 @@
 <br>-&nbsp;gen~ IIR
 <br>-&nbsp;gen~ IIR vs FIR
 <br>-&nbsp;gen~ onepole
-<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_svf.html" class="text-primary"><b>gen~ svf</b></a></strong><br></p>
+<br>-&nbsp;<a href="gen_svf.html" class="text-primary"><b>gen~ svf</b></a></strong><br></p>
                                 </div>
                             </div>
                         </div>
@@ -179,7 +179,8 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;">
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
+  <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise free creator - <a href="https://mobirise.site/n" style="color:#aaa;">Try here</a></p>
 
 </section><script src="https://www.gabrielavelitch.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
  <script src="https://www.gabrielavelitch.com/assets/parallax/jarallax.js"></script>
