--- a/pages/tools.html
+++ b/pages/tools.html
@@ -39,10 +39,10 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/favicon-96x96.png" alt="Mobirise" style="height: 3rem;">
+                        <img src="https://www.gabrielavelitch.com/assets/images/favicon-96x96.png" alt="Mobirise" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="index.html">Gabriela Velitch</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-4" href="https://www.gabrielavelitch.com/index.html">Gabriela Velitch</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -119,7 +119,7 @@
                                 <h5 class="card-title mbr-fonts-style display-5">
                                     <strong>Faust</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4">Faust (Functional Audio Stream) is a functional programming language for sound synthesis and audio processing</p>
-                                <div class="mbr-section-btn"><a href="https://mobiri.se" class="btn btn-primary display-4">Learn more</a></div>
+                                <div class="mbr-section-btn"><a href="https://faust.grame.fr" class="btn btn-primary display-4">Learn more</a></div>
                             </div>
                         </div>
                         <div class="col-12 col-md-5">
