--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -104,13 +104,14 @@
                             </div>
                             <div id="collapse1_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
-                                    <p class="mbr-fonts-style panel-text display-7"><strong>- filter library
-<br>- gen~ allpass
-<br>-&nbsp;gen~ biquad
-<br>-&nbsp;gen~ combfilter
-<br>-&nbsp;gen~ FIR
-<br>-&nbsp;gen~ IIR
-<br>-&nbsp;gen~ IIR vs FIR
+                                    <p class="mbr-fonts-style panel-text display-7">
+              <strong>- filter library
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ allpass</b></a></strong><br></p>
+<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ biquad</b></a></strong><br></p>
+<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ combfilter</b></a></strong><br></p>
+<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ FIR</b></a></strong><br></p>
+<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ IIR</b></a></strong><br></p>
+<br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ IIR vs FIR</b></a></strong><br></p>
 <br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_onepole.html" class="text-primary"><b>gen~ onepole</b></a></strong><br></p>
 <br>-&nbsp;<a href="https://www.gabrielavelitch.com/pages/maxmsp/gen_svf.html" class="text-primary"><b>gen~ svf</b></a></strong><br></p>
                                 </div>
