--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -114,7 +114,8 @@
 <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir.html" class="text-primary"><b>IIR</b></a>
 <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/comb_iir_vs_fir.html" class="text-primary"><b>IIR vs FIR</b></a>
 <br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/onepole.html" class="text-primary"><b>onepole</b></a>
-<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/svf.html" class="text-primary"><b>svf</b></a></strong>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/svf.html" class="text-primary"><b>svf</b></a>
+              </strong>
                                 </div>
                             </div>
                         </div>
