--- a/pages/maxmsptools.html
+++ b/pages/maxmsptools.html
@@ -131,9 +131,8 @@
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
                                       <strong>
-                                        - gen~ freeverb
-                                        <br>
-                                        - gen~ schroeder JCRev
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/freeverb.html" class="text-primary"><b>freeverb</b></a>
+<br>- <a href="https://www.gabrielavelitch.com/pages/maxmsp/schroeder_JCRev.html" class="text-primary"><b>schroeder JCRev</b></a>
                                       </strong>
                                       </p>
                                 </div>
